--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
             
             <title>
-                Hexo
+                北美老杨的博客
             </title>
             <meta content="width=device-width, initial-scale=1" name="viewport">
             <meta name="theme-color" content="#4184f3">
